--- a/stadvdb/index.html
+++ b/stadvdb/index.html
@@ -7,7 +7,15 @@
     <title>Vite App</title>
   </head>
   <body>
-    
+    <div>
+        <form id="insertForm">
+            <input id="patientName" name="patientName" placeholder="Patient name" type="text"/>
+            <input id="apptdate" name="apptdate" placeholder="Date of Appointment" type="date"/>
+            <input id="hospitalname" name="hospitalname" placeholder="Hospital Name" type="text"/>
+            <input id="doctorname" name="doctorname" placeholder="Doctor Name" type="text"/>
+            <button type="submit">Insert Appointment</button>
+        </form>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
