--- a/stadvdb/index.html
+++ b/stadvdb/index.html
@@ -9,10 +9,16 @@
 <body>
     <div>
         <form id="insertForm">
-            <input id="patientName" name="patientName" placeholder="Patient name" type="text"/>
+            <input id="apptid" name="apptid" placeholder="Appointment ID" type="text"/>
             <input id="apptdate" name="apptdate" placeholder="Date of Appointment" type="date"/>
+            <input id="pxid" name="pxid" placeholder="Patient ID" type="text"/>
+            <input id="pxage" name="pxage" placeholder="Patient Age" type="number"/>
+            <input id="pxgender" name="pxgender" placeholder="Patient Gender" type="text"/>
+            <input id="doctorid" name="doctorid" placeholder="Doctor ID" type="text"/>
             <input id="hospitalname" name="hospitalname" placeholder="Hospital Name" type="text"/>
-            <input id="doctorname" name="doctorname" placeholder="Doctor Name" type="text"/>
+            <input id="hospitalcity" name="hospitalcity" placeholder="Hospital City" type="text"/>
+            <input id="hospitalprovince" name="hospitalprovince" placeholder="Hospital Province" type="text"/>
+            <input id="hospitalregion" name="hospitalregion" placeholder="Hospital Region" type="text"/>
             <button type="submit">Insert Appointment</button>
         </form>
     </div>
