update age for task 2 case 2

--- a/stadvdb/index.html
+++ b/stadvdb/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
@@ -145,6 +145,21 @@
     <div id="reportsResults">
         <!-- Report results will be displayed here -->
     </div>
+
+    <h1>Step 2: Concurrency Control</h1>
+
+    <h2>Case 1: Reading the Same Data Item</h2>
+
+    <h2>Case 2: Updating and Reading the Same Data Item</h2>
+
+    <div>
+        <select id="dropdown">
+            <option value="" disabled selected>Select an Appointment ID</option>
+        </select>
+        <input id="updateAge" placeholder="New Age of Patient" type="number">
+        <button id="updatePatientAge">Update</button>
+    </div>
+
 
 
     <script type="module" src="/main.js"></script>
