--- a/stadvdb/index.html
+++ b/stadvdb/index.html
@@ -155,12 +155,6 @@
         </select>        
     </div>
 
-<<<<<<< Updated upstream
-    <h2>Case 1: Reading the Same Data Item</h2>
-
-    <h2>Case 2: Updating and Reading the Same Data Item</h2>
-
-=======
     <h2>Case 1: Reading the Same Data Item (Patient Age)</h2>
     <div>
         <select id="dropdown1" class="dropdown">
@@ -174,9 +168,8 @@
     </div>
 
     <h2>Case 2: Updating and Reading the Same Data Item (Patient Age)</h2>
->>>>>>> Stashed changes
     <div>
-        <select id="dropdown">
+        <select id="dropdown2">
             <option value="" disabled selected>Select an Appointment ID</option>
         </select>
         <input id="updateAge" placeholder="New Age of Patient" type="number"/>
