half way thru case 1 and case 2 of step 3: crash logs, write to file the crashes

--- a/stadvdb/index.html
+++ b/stadvdb/index.html
@@ -146,7 +146,7 @@
         <!-- Report results will be displayed here -->
     </div>
 
-    <h1>Step 2: Concurrency Control</h1>
+    <h1>Step 2 and Step 3</h1>
     <div>
         <select id="regionSelect">
             <option value="luzon">Luzon</option>
@@ -175,6 +175,13 @@
         <input id="updateAge" placeholder="New Age of Patient" type="number"/>
         <button id="updatePatientAge">Update</button>
     </div>
+
+    <div>
+        <button id="centralBtn">Turn Off Central</button>
+        <button id="luzonBtn">Turn Off Luzon</button>
+        <button id="visayas_mindanaoBtn">Turn Off Visayas Mindanao</button>
+    </div>
+    
 
 
 
