--- a/stadvdb/index.html
+++ b/stadvdb/index.html
@@ -123,13 +123,13 @@
     </div>
 
     <h1>Step 2 and Step 3</h1>
-    <div>
+    <!-- <div>
         <select id="regionSelect">
             <option value="luzon">Luzon</option>
             <option value="visayas">Visayas</option>
             <option value="mindanao">Mindanao</option>
         </select>        
-    </div>
+    </div> -->
 
     <h2>Case 1: Reading the Same Data Item (Patient Age)</h2>
     <div>
@@ -175,6 +175,10 @@
         <button id="visayas_mindanaoBtn">Turn Off Visayas Mindanao</button>
     </div>
     
+
+    <div>
+        <button id="simulateFailureBtn">Simulate Failure is Off</button>
+    </div>
 
 
 
