--- a/stadvdb/index.html
+++ b/stadvdb/index.html
@@ -161,8 +161,13 @@
         <select id="dropdown3">
             <option value="" disabled selected>Select an Appointment ID</option>
         </select>
-        <input id="updateAge2" placeholder="New Age of Patient" type="number"/>
-        <button id="updatePatientAge">Update</button>
+        <input id="updateAge2" placeholder="Age of Patient" type="number"/>
+        <input id="updateAge3" placeholder="Age of Patient" type="number"/>
+        <select id="updateOrder">
+            <option value="central,destination">Central then Destination</option>
+            <option value="destination,central">Destination then Central</option>
+        </select>
+        <button id="updatePatientAge2">Update</button>
     </div>
 
     <div id="updatedAgeResults2">
