step 3 case 1-4 working

--- a/stadvdb/index.html
+++ b/stadvdb/index.html
@@ -177,7 +177,8 @@
     
 
     <div>
-        <button id="simulateFailureBtn">Simulate Failure is Off</button>
+        <button id="simulateFailureCentral">Simulate Failure Central is Off</button>
+        <button id="simulateFailureLuzonVizMin">Simulate Failure Luzon / VizMin is Off</button>
     </div>
 
 
