not yet working textbased

--- a/stadvdb/index.html
+++ b/stadvdb/index.html
@@ -112,8 +112,7 @@
         <select id="totalAppointments">
             <option value="all">All Regions</option>
             <option value="luzon">Luzon</option>
-            <option value="visayas">Visayas</option>
-            <option value="mindanao">Mindanao</option>
+            <option value="vismin">Visayas_Mindanao</option>
         </select>
         <button id="generateReport">Generate Report</button>
     </div>
@@ -127,8 +126,7 @@
         <select id="averageAge">
             <option value="all">All Regions</option>
             <option value="luzon">Luzon</option>
-            <option value="visayas">Visayas</option>
-            <option value="mindanao">Mindanao</option>
+            <option value="vismin">Visayas_Mindanao</option>
         </select>
         <button id="generateAgeReport">Generate Age Report</button>
     </div>
@@ -142,8 +140,7 @@
         <select id="genderDistribution">
             <option value="all">All Regions</option>
             <option value="luzon">Luzon</option>
-            <option value="visayas">Visayas</option>
-            <option value="mindanao">Mindanao</option>
+            <option value="vismin">Visayas_Mindanao</option>
         </select>
         <button id="generateGenderReport">Generate Gender Report</button>
     </div>
