uodated html and removed unused funcs

--- a/stadvdb/index.html
+++ b/stadvdb/index.html
@@ -169,7 +169,7 @@
         <!-- Patient age results will be displayed here -->
     </div>
 
-    <h2>Case 2: Updating and Reading the Same Data Item (Patient Age)</h2>
+    <h2>Case 2 and Case 3: Updating and Reading the Same Data Item (Patient Age)</h2>
     <div>
         <select id="dropdown2">
             <option value="" disabled selected>Select an Appointment ID</option>
@@ -179,21 +179,6 @@
     </div>
 
     <div id="updatedAgeResults">
-        <!-- Updated Patient age results will be displayed here -->
-    </div>
-
-    <h2>Case 3: Updating the Same Data Item in Two Nodes (Patient Age)</h2>
-    <div>
-        <input id="updateAge2" placeholder="Age of Patient" type="number"/>
-        <input id="updateAge3" placeholder="Age of Patient" type="number"/>
-        <select id="updateOrder">
-            <option value="central,destination">Central then Destination</option>
-            <option value="destination,central">Destination then Central</option>
-        </select>
-        <button id="updatePatientAge2">Update</button>
-    </div>
-
-    <div id="updatedAgeResults2">
         <!-- Updated Patient age results will be displayed here -->
     </div>
 
